--- a/FMmodulator.ioc
+++ b/FMmodulator.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=TIM3_CH1/TRIG
-Dma.RequestsNb=1
+Dma.Request1=TIM4_UP
+Dma.RequestsNb=2
 Dma.TIM3_CH1/TRIG.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM3_CH1/TRIG.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM3_CH1/TRIG.0.Instance=DMA1_Stream4
@@ -11,6 +12,16 @@ Dma.TIM3_CH1/TRIG.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM3_CH1/TRIG.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM3_CH1/TRIG.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM3_CH1/TRIG.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM4_UP.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_UP.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_UP.1.Instance=DMA1_Stream6
+Dma.TIM4_UP.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM4_UP.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_UP.1.Mode=DMA_CIRCULAR
+Dma.TIM4_UP.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM4_UP.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_UP.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM4_UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -20,8 +31,9 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM3
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM4
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -30,6 +42,7 @@ Mcu.Pin10=PA14
 Mcu.Pin11=PB3
 Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -38,7 +51,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -46,6 +59,7 @@ MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI15_10_IRQn=true\:0\:1\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -131,7 +145,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -172,12 +186,16 @@ TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM3.Period=800
 TIM3.Prescaler=0
+TIM4.IPParameters=Period
+TIM4.Period=4
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
