--- a/FMmodulator-STM32.ioc
+++ b/FMmodulator-STM32.ioc
@@ -1,39 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=TIM3_CH1/TRIG
-Dma.Request1=TIM4_UP
-Dma.RequestsNb=2
-Dma.TIM3_CH1/TRIG.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM3_CH1/TRIG.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM3_CH1/TRIG.0.Instance=DMA1_Stream4
-Dma.TIM3_CH1/TRIG.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM3_CH1/TRIG.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM3_CH1/TRIG.0.Mode=DMA_CIRCULAR
-Dma.TIM3_CH1/TRIG.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM3_CH1/TRIG.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM3_CH1/TRIG.0.Priority=DMA_PRIORITY_LOW
-Dma.TIM3_CH1/TRIG.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.TIM4_UP.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM4_UP.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM4_UP.1.Instance=DMA1_Stream6
-Dma.TIM4_UP.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM4_UP.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_UP.1.Mode=DMA_CIRCULAR
-Dma.TIM4_UP.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM4_UP.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM4_UP.1.Priority=DMA_PRIORITY_LOW
-Dma.TIM4_UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=TIM3
+Mcu.IP4=TIM4
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -58,8 +34,6 @@ Mcu.UserName=STM32F411RETx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI15_10_IRQn=true\:0\:1\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -70,6 +44,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -145,7 +120,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
